--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .header img {
  width: 100%;
 }
-.header .more-inf {
+.header .header__link {
  font-family: fantasy, cursive;
 }
 
@@ -21,7 +21,7 @@ body {
 .header { text-align: center;
 }
 }
-.centered-main-page-element {
+.main {
  display: block;
  width: 500px;
  margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
  display: inline-block;
  flex-grow: 1
 }
-.task-row-wrapper {
+.task-adding-form {
  display: flex;
 }
 ul {
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="task-adding-form__input"] {
  color: #333;
  font-weight: 700;
  font-size: 15px;
@@ -84,7 +84,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="task-adding-form__input"] {
  display: block;
  margin: 0 0 20px;
 }
@@ -118,12 +118,12 @@ li > label {
 li >    input[type="text"] {
  width: 226px;
 }
-button.delete img {
+button.delete-task-btn img {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete-task-btn img:hover {
  transform: rotateZ(0);
 }
 
