--- a/style.css
+++ b/style.css
@@ -1,49 +1,61 @@
 /* Basic Style */
+
 .page {
  background-color: #f8f8f8;
  color: #333;
  font-family: Lato, sans-serif;
 }
+
 .header {
  width: 500px;
  margin: 0 auto;
  display: block;
  text-align: right;
 }
+
 .header .header__image {
  width: 100%;
 }
+
 .header .header__link {
  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.header { text-align: center;
+
+.header {
+ text-align: center;
 }
-}
+
 .main {
  display: block;
  width: 500px;
  margin: 0 auto 0;
 }
+
 .task {
  width: 56%;
  display: inline-block;
  flex-grow: 1
 }
+
 .task-adding-form {
  display: flex;
 }
+
 .task-list {
  margin:0;
  padding: 0px;
 }
+
 li, h3 {
  list-style:none;
 }
+
 .task-input,.button{
  outline:none;
 }
+
 .button {
  background: none;
  border: 0px;
@@ -53,9 +65,11 @@ li, h3 {
  font-family: Lato, sans-serif;
  cursor: pointer;
 }
+
 .button:hover {
  color: #3a3a3a;
 }
+
 /* Heading */
 .main__subtitle,
 .task-lable[for="task-adding-form__input"] {
@@ -67,6 +81,7 @@ li, h3 {
  margin: 0;
  text-transform: uppercase;
 }
+
 .task-input[type="text"] {
  margin: 0;
  font-size: 18px;
@@ -79,6 +94,7 @@ li, h3 {
  font-family: Lato, sans-serif;
  color: #888;
 }
+
 .task-input[type="text"]:focus {
  color: #333;
 }
@@ -98,11 +114,11 @@ li, h3 {
  overflow: hidden;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
-
  display: flex;
  justify-content: space-between;
  align-items: center;
 }
+
 .task-list__item > .task-input,
 .task-list__item > .task-lable,
 .task-list__item > .button {
@@ -113,15 +129,18 @@ li, h3 {
 .task-list__item > .task-input[type="checkbox"] {
  margin: 0 10px;
 }
+
 .task-list__item > .task-label {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
 }
+
 .task-list__item > .task-input[type="text"] {
  width: 226px;
 }
+
 .task-list__item > .button.delete-task-btn:hover {
     color: #cf2323;
 }
@@ -131,6 +150,7 @@ button.delete-task-btn .button__image {
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
 }
+
 button.delete-task-btn .button__image:hover {
  transform: rotateZ(0);
 }
