--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@
  text-align: right;
 }
 
-.header .header__image {
+.header__image {
  width: 100%;
 }
 
-.header .header__link {
+.header__link {
  font-family: fantasy, cursive;
 }
 
@@ -27,20 +27,15 @@
  text-align: center;
 }
 
-.main {
+.task-list-block {
  display: block;
  width: 500px;
- margin: 0 auto 0;
+ margin: 16px auto 0;
 }
 
-.task {
- width: 56%;
- display: inline-block;
- flex-grow: 1;
-}
-
-.task-adding-form {
- display: flex;
+.adding-task__form {
+    display: flex;
+    margin-top: 20px;
 }
 
 .task-list {
@@ -48,37 +43,32 @@
  padding: 0px;
 }
 
-li, h3 {
- list-style:none;
-}
-
-.task-input,
-.button{
- outline:none;
-}
-
-.button {
- background: none;
- border: 0px;
- color: #888;
- font-size: 15px;
- width: 60px;
- font-family: Lato, sans-serif;
- cursor: pointer;
-}
-
-.button:hover {
- color: #3a3a3a;
-}
+.task-list__item {
+    list-style: none;
+  }
+  
+  .task-input,
+  .button {
+    outline: none;
+  }
+  .button {
+    background: none;
+    border: 0px;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+  }  
 
 /* Heading */
-.main__subtitle,
-.task-lable[for="task-adding-form__input"] {
+.task-list-subtitle {
  color: #333;
  font-weight: 700;
  font-size: 15px;
  border-bottom: 2px solid #333;
  padding: 30px 0 10px;
+ display: block;
  margin: 0;
  text-transform: uppercase;
 }
@@ -94,6 +84,9 @@ li, h3 {
  border-radius: 6px;
  font-family: Lato, sans-serif;
  color: #888;
+ box-sizing: border-box;
+ display: inline-block;
+ flex-grow: 1;
 }
 
 .task-input[type="text"]:focus {
@@ -101,14 +94,13 @@ li, h3 {
 }
 
 /* New Task */
-.task-lable[for="task-adding-form__input"] {
- display: block;
- margin: 0 0 20px;
-}
+.adding-task .task-input {
+    width: 318px;
+  }
 
-.task-input#task-adding-form__input {
- width: 318px;
- }
+.adding-task .button:hover {
+ color: #0fc57c;
+  }
 
 /* Task list */
 .task-list__item {
@@ -121,7 +113,7 @@ li, h3 {
 }
 
 .task-list__item > .task-input,
-.task-list__item > .task-lable,
+.task-list__item > .task-name,
 .task-list__item > .button {
   vertical-align: middle;
  vertical-align: middle;
@@ -131,47 +123,45 @@ li, h3 {
  margin: 0 10px;
 }
 
-.task-list__item > .task-label {
+.task-name {
  padding-left: 10px;
  box-sizing: border-box;
  font-size: 18px;
  width: 226px;
+ display: inline-block;
+ flex-grow: 1;
 }
 
-.task-list__item > .task-input[type="text"] {
- width: 226px;
-}
-
-.task-list__item > .button.delete-task-btn:hover {
+.edit-task-btn:hover {
     color: #cf2323;
 }
 
-button.delete-task-btn .button__image {
+.button__image {
  height: 2em;
  transform: rotateZ(45deg);
  transition: transform 200ms ease-in;
 }
 
-button.delete-task-btn .button__image:hover {
+.button__image:hover {
  transform: rotateZ(0);
 }
 
 /* Completed */
-.task-list#completed-tasks-list .task-label {
+#completed-tasks__list .task-name {
  text-decoration: line-through;
  color: #888;
 }
 
 /* Edit Task */
-.task-list .task-list__item .task-input[type=text] {
+.task-list__item .task-input[type=text] {
  display:none;
 }
 
-.task-list .task-list__item .edit-mode .task-input[type=text] {
+.task-list__item_edit-mode .task-input[type=text] {
  display:inline-block;
  width:224px;
 }
 
-.task-list .task-list__item .edit-mode .task-label {
+.task-list__item_edit-mode .task-name {
  display:none;
 }
