--- a/style.css
+++ b/style.css
@@ -1,57 +1,61 @@
 /* Basic Style */
 
 .page {
- background-color: #f8f8f8;
- color: #333;
- font-family: Lato, sans-serif;
-}
-
-.header {
- width: 500px;
- margin: 0 auto;
- display: block;
- text-align: right;
-}
-
-.header__image {
- width: 100%;
-}
-
-.header__link {
- font-family: fantasy, cursive;
-}
-
-@media (max-width:768px) {
-
-.header {
- text-align: center;
-}
-
-.task-list-module {
- display: block;
- width: 500px;
- margin: 16px auto 0;
-}
-
-.adding-task__form {
+    background-color: #f8f8f8;
+    color: #333;
+    font-family: Lato, sans-serif;
+  }
+  
+  .header {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+    text-align: right;
+  }
+  
+  .header__image {
+    width: 100%;
+    margin-bottom: -3px;
+  }
+  
+  .header__link {
+    font-family: fantasy, cursive;
+  }
+  
+  @media (max-width: 768px) {
+  
+    .header { 
+      text-align: center;
+    }
+  
+  }
+  
+  .task-list-module {
+    display: block;
+    width: 500px;
+    margin: 16px auto 0;
+  }
+  
+  .adding-task__form {
     display: flex;
     margin-top: 20px;
-}
-
-.task-list {
- margin:0;
- padding: 0px;
-}
-
-.task-list__item {
+  }
+  
+  .task-list {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .task-list__item {
     list-style: none;
   }
   
   .task-input,
-  .button {
+  .btn {
     outline: none;
   }
-  .button {
+  
+  .btn {
     background: none;
     border: 0px;
     color: #888;
@@ -59,109 +63,113 @@
     width: 60px;
     font-family: Lato, sans-serif;
     cursor: pointer;
-  }  
-
-/* Heading */
-.task-list-subtitle {
- color: #333;
- font-weight: 700;
- font-size: 15px;
- border-bottom: 2px solid #333;
- padding: 30px 0 10px;
- display: block;
- margin: 0;
- text-transform: uppercase;
-}
-
-.task-input[type="text"] {
- margin: 0;
- font-size: 18px;
- line-height: 18px;
- height: 21px;
- padding: 0 9px;
- border: 1px solid #ddd;
- background: #fff;
- border-radius: 6px;
- font-family: Lato, sans-serif;
- color: #888;
- box-sizing: border-box;
- display: inline-block;
- flex-grow: 1;
-}
-
-.task-input[type="text"]:focus {
- color: #333;
-}
-
-/* New Task */
-.adding-task .task-input {
+  }
+  
+  /* Heading */
+  
+  .task-list-title {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    text-transform: uppercase;
+    display: block;
+    margin: 0;
+  }
+  
+  .task-input[type="text"] {
+    margin: 0;
+    font-size: 18px;
+    line-height: 18px;
+    height: 21px;
+    padding: 0 9px;
+    border: 1px solid #ddd;
+    background: #fff;
+    border-radius: 6px;
+    font-family: Lato, sans-serif;
+    color: #888;
+    box-sizing: border-box;
+    display: inline-block;
+    flex-grow: 1;
+  }
+  
+  .task-input[type="text"]:focus {
+    color: #333;
+  }
+  
+  /* New Task */
+  
+  .adding-task .task-input {
     width: 318px;
   }
-
-.adding-task .button:hover {
- color: #0fc57c;
+  
+  .adding-task .btn:hover {
+    color: #0fc57c;
   }
-
-/* Task list */
-.task-list__item {
- overflow: hidden;
- padding: 20px 0;
- border-bottom: 1px solid #eee;
- display: flex;
- justify-content: space-between;
- align-items: center;
-}
-
-.task-list__item > .task-input,
-.task-list__item > .task-name,
-.task-list__item > .button {
-  vertical-align: middle;
- vertical-align: middle;
-}
-
-.task-list__item > .task-input[type="checkbox"] {
- margin: 0 10px;
-}
-
-.task-name {
- padding-left: 10px;
- box-sizing: border-box;
- font-size: 18px;
- width: 226px;
- display: inline-block;
- flex-grow: 1;
-}
-
-.edit-task-btn:hover {
+  
+  /* Task list */
+  
+  .task-list__item {
+    overflow: hidden;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .task-list__item > .task-input,
+  .task-list__item > .task-name,
+  .task-list__item > .btn {
+    vertical-align: middle;
+  }
+  
+  .task-list__item > .task-input[type="checkbox"] {
+    margin: 0 10px;
+  }
+  
+  .task-name {
+    padding-left: 10px;
+    box-sizing: border-box;
+    font-size: 18px;
+    width: 226px;
+    display: inline-block;
+    flex-grow: 1;
+  }
+  
+  .edit-task-btn:hover {
     color: #cf2323;
-}
-
-.button__image {
- height: 2em;
- transform: rotateZ(45deg);
- transition: transform 200ms ease-in;
-}
-
-.button__image:hover {
- transform: rotateZ(0);
-}
-
-/* Completed */
-#completed-tasks__list .task-name {
- text-decoration: line-through;
- color: #888;
-}
-
-/* Edit Task */
-.task-list__item .task-input[type=text] {
- display:none;
-}
-
-.task-list__item_edit-mode .task-input[type=text] {
- display:inline-block;
- width:224px;
-}
-
-.task-list__item_edit-mode .task-name {
- display:none;
+  }
+  
+  .btn__image {
+    height: 2em;
+    transform: rotateZ(45deg);
+    transition: transform 200ms ease-in;
+  }
+  
+  .btn__image:hover {
+    transform: rotateZ(0);
+  }
+  
+  /* Completed */
+  
+  #completed-tasks__list .task-name {
+    text-decoration: line-through;
+    color: #888;
+  }
+  
+  /* Edit Task */
+  
+  .task-list__item .task-input[type=text] {
+    display:none;
+  }
+  
+  .task-list__item_edit-mode .task-input[type=text] {
+    display: inline-block;
+    width: 224px;
+  }
+  
+  .task-list__item_edit-mode .task-name {
+    display:none;
 }
